<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo Circuit</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_circuit_manager">Circuit Manager</string>
    <string name="action_near_me">Near Me</string>
    <string name="action_settings">Settings</string>
    <string name="action_circuits">Circuit(s)</string>
    <string name="pref_passcode">Passcode Lock</string>
    <string name="pref_passcode_summary">Require password for access</string>
    <string name="pref_units">Units</string>
    <string name="pref_default_unit">United States Customary Units</string>
    <string name="pref_unit_summary">Units of measurement</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_food">Food</string>
    <string name="text_life">Life</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_attractions">Attractions</string>
    <!-- Strings for Speed fragment -->
    <string name="info">Waiting for GPS..</string>
    <string name="HUD_menu_name">Hud Mode</string>
    <string name="HUD_ON">Hud ON</string>
    <string name="HUD_OFF">Hud OFF</string>
    <string name="about_menu_name">About</string>
    <string name="about_message">A Basic speedometer</string>
    <string name="unit_km">Kilometer</string>
    <string name="unit_miles">Miles Per Hour</string>
    <string name="setting_unit">Measurement Unit</string>

    <!-- Strings for Google Places API -->
    <string name="places_authority">maps.googleapis.com</string>
    <string name="places_path">/maps/api/place/nearbysearch/json</string>
    <string name="places_key">AIzaSyAwfs7kihRkNxuSKNiC3UZBSqip7_fqq_I</string>

    <!-- Strings for Open Weather Map API -->
    <string name="weather_authority">api.openweathermap.org</string>
    <string name="weather_path">/data/2.5/weather</string>

    <!-- Strings for testing -->
    <string name="test_circuit_date">10/22/14 </string>
    <string name="test_circuit_time">8:43 AM - 9:02 AM</string>
    <string name="test_circuit_name">Commute to work</string>
    <string name="test_circuit_duration">19 min</string>
    <string name="test_circuit_distance">4.2 miles</string>
    <string name="test_near_me_place">Taco Bell</string>
    <string name="test_near_me_distance">1.2 Mi</string>

    <string-array name="pref_unit_type">
        <item>United States Customary Units</item>
        <item>International System of Units</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
